# bevy_easy_player_handler

./: Cargo.toml  README.md
integration_example/: Cargo.toml  game_data.db
integration_example/src/: main.rs
spreadsheets/: project_references.csv
src/: lib.rs
src/database/: actions.rs  mod.rs  pipeline_db_and_party.rs  queries.rs
src/handlers/: database.rs  mod.rs  party.rs  player.rs
tests/: test_database.rs  test_party.rs  test_player.rs
